--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 76,
    "id": "1a73e17b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "import keras\n",
     "import keras.layers as layers\n",
     "from keras.models import Sequential\n",
-    "from keras.regularizers import l1\n",
+    "from keras.regularizers import l1,l2\n",
     "\n",
     "import cv2\n",
     "from sklearn import preprocessing\n",
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 77,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -667,14 +667,14 @@
     "\n",
     "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.1)))\n",
     "\n",
-    "model.add(layers.Dense(units=84, activation='relu'))\n",
+    "model.add(layers.Dense(units=84, activation='relu',kernel_regularizer=l2(0.05)))\n",
     "\n",
     "model.add(layers.Dense(units=1, activation = 'sigmoid'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 78,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -682,27 +682,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_6 (Conv2D)           (None, 126, 126, 6)       60        \n",
+      " conv2d_8 (Conv2D)           (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d_6 (Averag  (None, 63, 63, 6)        0         \n",
+      " average_pooling2d_8 (Averag  (None, 63, 63, 6)        0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " conv2d_7 (Conv2D)           (None, 61, 61, 16)        880       \n",
+      " conv2d_9 (Conv2D)           (None, 61, 61, 16)        880       \n",
       "                                                                 \n",
-      " average_pooling2d_7 (Averag  (None, 30, 30, 16)       0         \n",
+      " average_pooling2d_9 (Averag  (None, 30, 30, 16)       0         \n",
       " ePooling2D)                                                     \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 14400)             0         \n",
+      " flatten_4 (Flatten)         (None, 14400)             0         \n",
       "                                                                 \n",
-      " dense_9 (Dense)             (None, 120)               1728120   \n",
+      " dense_12 (Dense)            (None, 120)               1728120   \n",
       "                                                                 \n",
-      " dense_10 (Dense)            (None, 84)                10164     \n",
+      " dense_13 (Dense)            (None, 84)                10164     \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 1)                 85        \n",
+      " dense_14 (Dense)            (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 82,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -738,18 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 83,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 18\n",
-    "BATCH_SIZE = 30"
+    "BATCH_SIZE = 40"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 84,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -778,50 +778,50 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/18\n",
-      "19/19 [==============================] - 2s 74ms/step - loss: 807.7003 - accuracy: 0.7306 - val_loss: 252.8042 - val_accuracy: 0.8583\n",
+      "14/14 [==============================] - 2s 88ms/step - loss: 975.1935 - accuracy: 0.7293 - val_loss: 322.0977 - val_accuracy: 0.8333\n",
       "Epoch 2/18\n",
-      "19/19 [==============================] - 1s 62ms/step - loss: 168.8263 - accuracy: 0.7565 - val_loss: 87.4602 - val_accuracy: 0.8333\n",
+      "14/14 [==============================] - 1s 82ms/step - loss: 211.2396 - accuracy: 0.7556 - val_loss: 138.1749 - val_accuracy: 0.8833\n",
       "Epoch 3/18\n",
-      "19/19 [==============================] - 1s 62ms/step - loss: 56.6193 - accuracy: 0.7786 - val_loss: 36.3230 - val_accuracy: 0.8583\n",
+      "14/14 [==============================] - 1s 81ms/step - loss: 91.1710 - accuracy: 0.8064 - val_loss: 58.0596 - val_accuracy: 0.7417\n",
       "Epoch 4/18\n",
-      "19/19 [==============================] - 1s 64ms/step - loss: 30.9366 - accuracy: 0.7509 - val_loss: 27.0769 - val_accuracy: 0.7000\n",
+      "14/14 [==============================] - 1s 78ms/step - loss: 46.0327 - accuracy: 0.7669 - val_loss: 34.3899 - val_accuracy: 0.8167\n",
       "Epoch 5/18\n",
-      "19/19 [==============================] - 1s 64ms/step - loss: 25.4729 - accuracy: 0.7325 - val_loss: 24.2663 - val_accuracy: 0.8167\n",
+      "14/14 [==============================] - 1s 76ms/step - loss: 31.1600 - accuracy: 0.7575 - val_loss: 27.9368 - val_accuracy: 0.8583\n",
       "Epoch 6/18\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 23.8100 - accuracy: 0.7989 - val_loss: 23.6580 - val_accuracy: 0.9000\n",
+      "14/14 [==============================] - 1s 82ms/step - loss: 26.7789 - accuracy: 0.7594 - val_loss: 25.7435 - val_accuracy: 0.8167\n",
       "Epoch 7/18\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 23.2745 - accuracy: 0.7657 - val_loss: 23.4985 - val_accuracy: 0.8500\n",
+      "14/14 [==============================] - 1s 87ms/step - loss: 25.0962 - accuracy: 0.7857 - val_loss: 24.2193 - val_accuracy: 0.8417\n",
       "Epoch 8/18\n",
-      "19/19 [==============================] - 1s 61ms/step - loss: 23.7415 - accuracy: 0.7269 - val_loss: 23.6726 - val_accuracy: 0.7000\n",
+      "14/14 [==============================] - 1s 76ms/step - loss: 23.9313 - accuracy: 0.8026 - val_loss: 23.3151 - val_accuracy: 0.8583\n",
       "Epoch 9/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 23.1757 - accuracy: 0.7804 - val_loss: 22.5132 - val_accuracy: 0.6750\n",
+      "14/14 [==============================] - 1s 71ms/step - loss: 23.4915 - accuracy: 0.7801 - val_loss: 22.9562 - val_accuracy: 0.8667\n",
       "Epoch 10/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 22.6046 - accuracy: 0.7841 - val_loss: 23.7117 - val_accuracy: 0.8667\n",
+      "14/14 [==============================] - 1s 67ms/step - loss: 22.7558 - accuracy: 0.7932 - val_loss: 22.3316 - val_accuracy: 0.8833\n",
       "Epoch 11/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 22.7196 - accuracy: 0.8155 - val_loss: 22.0974 - val_accuracy: 0.8417\n",
+      "14/14 [==============================] - 1s 68ms/step - loss: 22.2945 - accuracy: 0.7951 - val_loss: 22.1212 - val_accuracy: 0.8000\n",
       "Epoch 12/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 21.9215 - accuracy: 0.7989 - val_loss: 21.7315 - val_accuracy: 0.8583\n",
+      "14/14 [==============================] - 1s 70ms/step - loss: 21.9680 - accuracy: 0.8120 - val_loss: 21.7109 - val_accuracy: 0.8417\n",
       "Epoch 13/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 23.3981 - accuracy: 0.7768 - val_loss: 21.9723 - val_accuracy: 0.8667\n",
+      "14/14 [==============================] - 1s 70ms/step - loss: 21.6313 - accuracy: 0.7857 - val_loss: 21.3078 - val_accuracy: 0.9000\n",
       "Epoch 14/18\n",
-      "19/19 [==============================] - 1s 57ms/step - loss: 21.3378 - accuracy: 0.8193 - val_loss: 20.9023 - val_accuracy: 0.8917\n",
+      "14/14 [==============================] - 1s 70ms/step - loss: 21.1993 - accuracy: 0.8214 - val_loss: 20.9784 - val_accuracy: 0.8583\n",
       "Epoch 15/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 21.0244 - accuracy: 0.8210 - val_loss: 20.8431 - val_accuracy: 0.8333\n",
+      "14/14 [==============================] - 1s 70ms/step - loss: 20.9940 - accuracy: 0.7895 - val_loss: 20.8288 - val_accuracy: 0.8750\n",
       "Epoch 16/18\n",
-      "19/19 [==============================] - 1s 57ms/step - loss: 21.6894 - accuracy: 0.8007 - val_loss: 21.6362 - val_accuracy: 0.8750\n",
+      "14/14 [==============================] - 1s 72ms/step - loss: 20.7319 - accuracy: 0.8271 - val_loss: 20.4960 - val_accuracy: 0.8500\n",
       "Epoch 17/18\n",
-      "19/19 [==============================] - 1s 55ms/step - loss: 21.2099 - accuracy: 0.8081 - val_loss: 20.7518 - val_accuracy: 0.8917\n",
+      "14/14 [==============================] - 1s 72ms/step - loss: 20.4155 - accuracy: 0.8421 - val_loss: 20.2290 - val_accuracy: 0.8833\n",
       "Epoch 18/18\n",
-      "19/19 [==============================] - 1s 57ms/step - loss: 21.3095 - accuracy: 0.8044 - val_loss: 21.3858 - val_accuracy: 0.8833\n"
+      "14/14 [==============================] - 1s 72ms/step - loss: 20.2538 - accuracy: 0.8308 - val_loss: 20.1457 - val_accuracy: 0.8833\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb0c14d9d0>"
+       "<keras.callbacks.History at 0x1eb0e4001c0>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 88,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 89,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -886,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8709677419354839"
+       "0.8805970149253731"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,17 +907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 91,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.782608695652174"
+       "0.855072463768116"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
