increased l2 regularization term

--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
@@ -667,14 +667,14 @@
     "\n",
     "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.1)))\n",
     "\n",
-    "model.add(layers.Dense(units=84, activation='relu',kernel_regularizer=l2(0.05)))\n",
+    "model.add(layers.Dense(units=84, activation='relu',kernel_regularizer=l2(0.1)))\n",
     "\n",
     "model.add(layers.Dense(units=1, activation = 'sigmoid'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 96,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -682,27 +682,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_8 (Conv2D)           (None, 126, 126, 6)       60        \n",
+      " conv2d_10 (Conv2D)          (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d_8 (Averag  (None, 63, 63, 6)        0         \n",
-      " ePooling2D)                                                     \n",
+      " average_pooling2d_10 (Avera  (None, 63, 63, 6)        0         \n",
+      " gePooling2D)                                                    \n",
       "                                                                 \n",
-      " conv2d_9 (Conv2D)           (None, 61, 61, 16)        880       \n",
+      " conv2d_11 (Conv2D)          (None, 61, 61, 16)        880       \n",
       "                                                                 \n",
-      " average_pooling2d_9 (Averag  (None, 30, 30, 16)       0         \n",
-      " ePooling2D)                                                     \n",
+      " average_pooling2d_11 (Avera  (None, 30, 30, 16)       0         \n",
+      " gePooling2D)                                                    \n",
       "                                                                 \n",
-      " flatten_4 (Flatten)         (None, 14400)             0         \n",
+      " flatten_5 (Flatten)         (None, 14400)             0         \n",
       "                                                                 \n",
-      " dense_12 (Dense)            (None, 120)               1728120   \n",
+      " dense_15 (Dense)            (None, 120)               1728120   \n",
       "                                                                 \n",
-      " dense_13 (Dense)            (None, 84)                10164     \n",
+      " dense_16 (Dense)            (None, 84)                10164     \n",
       "                                                                 \n",
-      " dense_14 (Dense)            (None, 1)                 85        \n",
+      " dense_17 (Dense)            (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -738,18 +738,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "EPOCHS = 18\n",
-    "BATCH_SIZE = 40"
+    "BATCH_SIZE = 30"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -778,50 +778,50 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/18\n",
-      "14/14 [==============================] - 2s 88ms/step - loss: 975.1935 - accuracy: 0.7293 - val_loss: 322.0977 - val_accuracy: 0.8333\n",
+      "19/19 [==============================] - 2s 69ms/step - loss: 781.8754 - accuracy: 0.7343 - val_loss: 237.1460 - val_accuracy: 0.8417\n",
       "Epoch 2/18\n",
-      "14/14 [==============================] - 1s 82ms/step - loss: 211.2396 - accuracy: 0.7556 - val_loss: 138.1749 - val_accuracy: 0.8833\n",
+      "19/19 [==============================] - 1s 61ms/step - loss: 166.1427 - accuracy: 0.8173 - val_loss: 89.8518 - val_accuracy: 0.8500\n",
       "Epoch 3/18\n",
-      "14/14 [==============================] - 1s 81ms/step - loss: 91.1710 - accuracy: 0.8064 - val_loss: 58.0596 - val_accuracy: 0.7417\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 59.7780 - accuracy: 0.8081 - val_loss: 40.3561 - val_accuracy: 0.8083\n",
       "Epoch 4/18\n",
-      "14/14 [==============================] - 1s 78ms/step - loss: 46.0327 - accuracy: 0.7669 - val_loss: 34.3899 - val_accuracy: 0.8167\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 34.6471 - accuracy: 0.7915 - val_loss: 29.9307 - val_accuracy: 0.8583\n",
       "Epoch 5/18\n",
-      "14/14 [==============================] - 1s 76ms/step - loss: 31.1600 - accuracy: 0.7575 - val_loss: 27.9368 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 28.5058 - accuracy: 0.7952 - val_loss: 27.1427 - val_accuracy: 0.8333\n",
       "Epoch 6/18\n",
-      "14/14 [==============================] - 1s 82ms/step - loss: 26.7789 - accuracy: 0.7594 - val_loss: 25.7435 - val_accuracy: 0.8167\n",
+      "19/19 [==============================] - 1s 64ms/step - loss: 27.8603 - accuracy: 0.7343 - val_loss: 27.3434 - val_accuracy: 0.8583\n",
       "Epoch 7/18\n",
-      "14/14 [==============================] - 1s 87ms/step - loss: 25.0962 - accuracy: 0.7857 - val_loss: 24.2193 - val_accuracy: 0.8417\n",
+      "19/19 [==============================] - 1s 61ms/step - loss: 25.9095 - accuracy: 0.7860 - val_loss: 25.2739 - val_accuracy: 0.8333\n",
       "Epoch 8/18\n",
-      "14/14 [==============================] - 1s 76ms/step - loss: 23.9313 - accuracy: 0.8026 - val_loss: 23.3151 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 24.7361 - accuracy: 0.8026 - val_loss: 23.7530 - val_accuracy: 0.8917\n",
       "Epoch 9/18\n",
-      "14/14 [==============================] - 1s 71ms/step - loss: 23.4915 - accuracy: 0.7801 - val_loss: 22.9562 - val_accuracy: 0.8667\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 23.6991 - accuracy: 0.8100 - val_loss: 23.3445 - val_accuracy: 0.8833\n",
       "Epoch 10/18\n",
-      "14/14 [==============================] - 1s 67ms/step - loss: 22.7558 - accuracy: 0.7932 - val_loss: 22.3316 - val_accuracy: 0.8833\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 23.3112 - accuracy: 0.7934 - val_loss: 22.7372 - val_accuracy: 0.8333\n",
       "Epoch 11/18\n",
-      "14/14 [==============================] - 1s 68ms/step - loss: 22.2945 - accuracy: 0.7951 - val_loss: 22.1212 - val_accuracy: 0.8000\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 22.6433 - accuracy: 0.8247 - val_loss: 22.4632 - val_accuracy: 0.8000\n",
       "Epoch 12/18\n",
-      "14/14 [==============================] - 1s 70ms/step - loss: 21.9680 - accuracy: 0.8120 - val_loss: 21.7109 - val_accuracy: 0.8417\n",
+      "19/19 [==============================] - 1s 57ms/step - loss: 22.2803 - accuracy: 0.8081 - val_loss: 21.8402 - val_accuracy: 0.9000\n",
       "Epoch 13/18\n",
-      "14/14 [==============================] - 1s 70ms/step - loss: 21.6313 - accuracy: 0.7857 - val_loss: 21.3078 - val_accuracy: 0.9000\n",
+      "19/19 [==============================] - 1s 58ms/step - loss: 21.7705 - accuracy: 0.8137 - val_loss: 21.4952 - val_accuracy: 0.8417\n",
       "Epoch 14/18\n",
-      "14/14 [==============================] - 1s 70ms/step - loss: 21.1993 - accuracy: 0.8214 - val_loss: 20.9784 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 58ms/step - loss: 21.5734 - accuracy: 0.8100 - val_loss: 21.4150 - val_accuracy: 0.8333\n",
       "Epoch 15/18\n",
-      "14/14 [==============================] - 1s 70ms/step - loss: 20.9940 - accuracy: 0.7895 - val_loss: 20.8288 - val_accuracy: 0.8750\n",
+      "19/19 [==============================] - 1s 59ms/step - loss: 21.4091 - accuracy: 0.8026 - val_loss: 21.0440 - val_accuracy: 0.8750\n",
       "Epoch 16/18\n",
-      "14/14 [==============================] - 1s 72ms/step - loss: 20.7319 - accuracy: 0.8271 - val_loss: 20.4960 - val_accuracy: 0.8500\n",
+      "19/19 [==============================] - 1s 56ms/step - loss: 21.1130 - accuracy: 0.8358 - val_loss: 20.8996 - val_accuracy: 0.8500\n",
       "Epoch 17/18\n",
-      "14/14 [==============================] - 1s 72ms/step - loss: 20.4155 - accuracy: 0.8421 - val_loss: 20.2290 - val_accuracy: 0.8833\n",
+      "19/19 [==============================] - 1s 58ms/step - loss: 20.9089 - accuracy: 0.8155 - val_loss: 21.0564 - val_accuracy: 0.8417\n",
       "Epoch 18/18\n",
-      "14/14 [==============================] - 1s 72ms/step - loss: 20.2538 - accuracy: 0.8308 - val_loss: 20.1457 - val_accuracy: 0.8833\n"
+      "19/19 [==============================] - 1s 57ms/step - loss: 20.8883 - accuracy: 0.8118 - val_loss: 20.6149 - val_accuracy: 0.8917\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb0e4001c0>"
+       "<keras.callbacks.History at 0x1eb0b044dc0>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 104,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -886,17 +886,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8805970149253731"
+       "0.9375"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,17 +907,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.855072463768116"
+       "0.8695652173913043"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
