added dropout regularization

--- a/notebooks/Predict on unknown.ipynb
+++ b/notebooks/Predict on unknown.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 107,
    "id": "c07e657f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 108,
    "id": "473157fd",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 109,
    "id": "f294c13c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 110,
    "id": "c5490cc4",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 111,
    "id": "f58b1783",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 112,
    "id": "6156e55b",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 113,
    "id": "2c4ddf87",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "4  13.png"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 114,
    "id": "e2bd8f26",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 115,
    "id": "00ce3da6",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 116,
    "id": "2eb41f47",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 117,
    "id": "da6c2be7",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 118,
    "id": "4b6f2219",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 119,
    "id": "8c6a3e0c",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "(50, 128, 128, 1)"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 120,
    "id": "7368d1ef",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 121,
    "id": "493c75d4",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 9 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001FCBE50B5E0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+      "WARNING:tensorflow:6 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x000001FCBE516C10> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 122,
    "id": "cfc84d48",
    "metadata": {},
    "outputs": [],
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 123,
    "id": "ba677d09",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 124,
    "id": "a0aa29ce",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 125,
    "id": "b2f317f2",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -357,7 +357,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>18.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -392,7 +392,7 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>24.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
@@ -407,7 +407,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>27.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -457,7 +457,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>36.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -467,7 +467,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>38.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -492,7 +492,7 @@
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>42.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
@@ -512,7 +512,7 @@
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>46.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
@@ -522,7 +522,7 @@
        "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>48.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
@@ -532,7 +532,7 @@
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>5.png</td>\n",
-       "      <td>sick</td>\n",
+       "      <td>normal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
@@ -557,7 +557,7 @@
        "    <tr>\n",
        "      <th>49</th>\n",
        "      <td>9.png</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>sick</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -565,7 +565,7 @@
       ],
       "text/plain": [
        "   im_path category\n",
-       "0    1.png   normal\n",
+       "0    1.png     sick\n",
        "1   10.png     sick\n",
        "2   11.png   normal\n",
        "3   12.png     sick\n",
@@ -574,17 +574,17 @@
        "6   15.png   normal\n",
        "7   16.png     sick\n",
        "8   17.png   normal\n",
-       "9   18.png     sick\n",
+       "9   18.png   normal\n",
        "10  19.png   normal\n",
        "11   2.png   normal\n",
        "12  20.png     sick\n",
        "13  21.png   normal\n",
        "14  22.png     sick\n",
        "15  23.png   normal\n",
-       "16  24.png   normal\n",
+       "16  24.png     sick\n",
        "17  25.png   normal\n",
        "18  26.png     sick\n",
-       "19  27.png   normal\n",
+       "19  27.png     sick\n",
        "20  28.png     sick\n",
        "21  29.png   normal\n",
        "22   3.png   normal\n",
@@ -594,30 +594,30 @@
        "26  33.png   normal\n",
        "27  34.png     sick\n",
        "28  35.png   normal\n",
-       "29  36.png   normal\n",
+       "29  36.png     sick\n",
        "30  37.png   normal\n",
-       "31  38.png   normal\n",
+       "31  38.png     sick\n",
        "32  39.png   normal\n",
        "33   4.png     sick\n",
        "34  40.png     sick\n",
        "35  41.png   normal\n",
-       "36  42.png   normal\n",
+       "36  42.png     sick\n",
        "37  43.png   normal\n",
        "38  44.png     sick\n",
        "39  45.png   normal\n",
-       "40  46.png     sick\n",
+       "40  46.png   normal\n",
        "41  47.png   normal\n",
-       "42  48.png     sick\n",
+       "42  48.png   normal\n",
        "43  49.png   normal\n",
-       "44   5.png     sick\n",
+       "44   5.png   normal\n",
        "45  50.png     sick\n",
        "46   6.png     sick\n",
        "47   7.png   normal\n",
        "48   8.png     sick\n",
-       "49   9.png   normal"
+       "49   9.png     sick"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 126,
    "id": "fc4e2ef2",
    "metadata": {},
    "outputs": [],
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 127,
    "id": "d0cd6c5d",
    "metadata": {},
    "outputs": [],
