--- a/notebooks/Prepare dataset + train .ipynb
+++ b/notebooks/Prepare dataset + train .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "id": "1a73e17b",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "id": "2c801b2b",
    "metadata": {},
    "outputs": [],
@@ -473,7 +473,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1eb7c200820>"
+       "<matplotlib.image.AxesImage at 0x192996e2820>"
       ]
      },
      "execution_count": 17,
@@ -650,31 +650,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 199,
    "id": "bf436615",
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(layers.Conv2D(filters=6, kernel_size=(3, 3), activation='relu', input_shape=(128,128,1)))\n",
+    "model.add(layers.Conv2D(filters=6, kernel_size=(3, 3), activation='relu', input_shape=(128,128,1),\n",
+    "                        kernel_regularizer=l2(0.0001)))\n",
     "model.add(layers.AveragePooling2D())\n",
+    "model.add(layers.Dropout(0.52))\n",
     "\n",
-    "model.add(layers.Conv2D(filters=16, kernel_size=(3, 3), activation='relu'))\n",
+    "model.add(layers.Conv2D(filters=16, kernel_size=(3, 3), activation='relu',kernel_regularizer=l1(0.1)))\n",
     "model.add(layers.AveragePooling2D())\n",
+    "model.add(layers.Dropout(0.2))\n",
     "\n",
     "model.add(layers.Flatten())\n",
     "\n",
     "model.add(layers.Dense(units=120, activation='relu',kernel_regularizer=l1(0.1)))\n",
+    "model.add(layers.Dropout(0.12))\n",
     "\n",
-    "model.add(layers.Dense(units=84, activation='relu',kernel_regularizer=l2(0.1)))\n",
+    "model.add(layers.Dense(units=84, activation='relu'))\n",
     "\n",
     "model.add(layers.Dense(units=1, activation = 'sigmoid'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 200,
    "id": "13cddea8",
    "metadata": {},
    "outputs": [
@@ -682,27 +686,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_19\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_10 (Conv2D)          (None, 126, 126, 6)       60        \n",
+      " conv2d_36 (Conv2D)          (None, 126, 126, 6)       60        \n",
       "                                                                 \n",
-      " average_pooling2d_10 (Avera  (None, 63, 63, 6)        0         \n",
+      " average_pooling2d_36 (Avera  (None, 63, 63, 6)        0         \n",
       " gePooling2D)                                                    \n",
       "                                                                 \n",
-      " conv2d_11 (Conv2D)          (None, 61, 61, 16)        880       \n",
+      " dropout_37 (Dropout)        (None, 63, 63, 6)         0         \n",
       "                                                                 \n",
-      " average_pooling2d_11 (Avera  (None, 30, 30, 16)       0         \n",
+      " conv2d_37 (Conv2D)          (None, 61, 61, 16)        880       \n",
+      "                                                                 \n",
+      " average_pooling2d_37 (Avera  (None, 30, 30, 16)       0         \n",
       " gePooling2D)                                                    \n",
       "                                                                 \n",
-      " flatten_5 (Flatten)         (None, 14400)             0         \n",
+      " dropout_38 (Dropout)        (None, 30, 30, 16)        0         \n",
       "                                                                 \n",
-      " dense_15 (Dense)            (None, 120)               1728120   \n",
+      " flatten_18 (Flatten)        (None, 14400)             0         \n",
       "                                                                 \n",
-      " dense_16 (Dense)            (None, 84)                10164     \n",
+      " dense_54 (Dense)            (None, 120)               1728120   \n",
       "                                                                 \n",
-      " dense_17 (Dense)            (None, 1)                 85        \n",
+      " dropout_39 (Dropout)        (None, 120)               0         \n",
+      "                                                                 \n",
+      " dense_55 (Dense)            (None, 84)                10164     \n",
+      "                                                                 \n",
+      " dense_56 (Dense)            (None, 1)                 85        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,739,309\n",
@@ -718,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 201,
    "id": "004766c4",
    "metadata": {},
    "outputs": [],
@@ -728,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 202,
    "id": "da9a7355",
    "metadata": {},
    "outputs": [],
@@ -738,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 203,
    "id": "7ac7e5f8",
    "metadata": {},
    "outputs": [],
@@ -749,19 +759,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 204,
    "id": "4e936e79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_generator = ImageDataGenerator(shear_range=0.4,\n",
-    "        zoom_range=0.4,horizontal_flip=True).flow(X_features, X_labels, batch_size=BATCH_SIZE)\n",
+    "train_generator = ImageDataGenerator(shear_range=0.72,\n",
+    "        zoom_range=0.72,horizontal_flip=True).flow(X_features, X_labels, batch_size=BATCH_SIZE)\n",
     "validation_generator = ImageDataGenerator().flow(Y_features, Y_labels, batch_size=BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 205,
    "id": "daaa042c",
    "metadata": {},
    "outputs": [
@@ -769,7 +779,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_19804/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+      "C:\\Users\\Taufeeq\\AppData\\Local\\Temp/ipykernel_40440/425097378.py:5: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
       "  model.fit_generator(train_generator, steps_per_epoch=steps_per_epoch, epochs=EPOCHS,\n"
      ]
     },
@@ -778,50 +788,50 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/18\n",
-      "19/19 [==============================] - 2s 69ms/step - loss: 781.8754 - accuracy: 0.7343 - val_loss: 237.1460 - val_accuracy: 0.8417\n",
+      "19/19 [==============================] - 2s 77ms/step - loss: 803.4831 - accuracy: 0.6476 - val_loss: 233.5834 - val_accuracy: 0.8000\n",
       "Epoch 2/18\n",
-      "19/19 [==============================] - 1s 61ms/step - loss: 166.1427 - accuracy: 0.8173 - val_loss: 89.8518 - val_accuracy: 0.8500\n",
+      "19/19 [==============================] - 1s 68ms/step - loss: 161.1332 - accuracy: 0.6827 - val_loss: 86.6079 - val_accuracy: 0.6667\n",
       "Epoch 3/18\n",
-      "19/19 [==============================] - 1s 62ms/step - loss: 59.7780 - accuracy: 0.8081 - val_loss: 40.3561 - val_accuracy: 0.8083\n",
+      "19/19 [==============================] - 1s 70ms/step - loss: 59.1640 - accuracy: 0.6310 - val_loss: 40.5715 - val_accuracy: 0.4833\n",
       "Epoch 4/18\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 34.6471 - accuracy: 0.7915 - val_loss: 29.9307 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 71ms/step - loss: 34.1783 - accuracy: 0.6827 - val_loss: 30.1704 - val_accuracy: 0.5333\n",
       "Epoch 5/18\n",
-      "19/19 [==============================] - 1s 63ms/step - loss: 28.5058 - accuracy: 0.7952 - val_loss: 27.1427 - val_accuracy: 0.8333\n",
+      "19/19 [==============================] - 1s 74ms/step - loss: 29.2382 - accuracy: 0.6513 - val_loss: 29.1179 - val_accuracy: 0.7333\n",
       "Epoch 6/18\n",
-      "19/19 [==============================] - 1s 64ms/step - loss: 27.8603 - accuracy: 0.7343 - val_loss: 27.3434 - val_accuracy: 0.8583\n",
+      "19/19 [==============================] - 1s 72ms/step - loss: 27.6445 - accuracy: 0.6808 - val_loss: 26.1989 - val_accuracy: 0.7083\n",
       "Epoch 7/18\n",
-      "19/19 [==============================] - 1s 61ms/step - loss: 25.9095 - accuracy: 0.7860 - val_loss: 25.2739 - val_accuracy: 0.8333\n",
+      "19/19 [==============================] - 1s 67ms/step - loss: 25.5025 - accuracy: 0.6827 - val_loss: 24.5782 - val_accuracy: 0.7417\n",
       "Epoch 8/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 24.7361 - accuracy: 0.8026 - val_loss: 23.7530 - val_accuracy: 0.8917\n",
+      "19/19 [==============================] - 1s 66ms/step - loss: 24.3388 - accuracy: 0.7325 - val_loss: 24.4542 - val_accuracy: 0.7083\n",
       "Epoch 9/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 23.6991 - accuracy: 0.8100 - val_loss: 23.3445 - val_accuracy: 0.8833\n",
+      "19/19 [==============================] - 1s 68ms/step - loss: 23.7886 - accuracy: 0.7509 - val_loss: 23.2476 - val_accuracy: 0.8500\n",
       "Epoch 10/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 23.3112 - accuracy: 0.7934 - val_loss: 22.7372 - val_accuracy: 0.8333\n",
+      "19/19 [==============================] - 1s 66ms/step - loss: 23.0516 - accuracy: 0.7325 - val_loss: 22.8050 - val_accuracy: 0.7500\n",
       "Epoch 11/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 22.6433 - accuracy: 0.8247 - val_loss: 22.4632 - val_accuracy: 0.8000\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 22.5263 - accuracy: 0.7454 - val_loss: 22.1312 - val_accuracy: 0.8583\n",
       "Epoch 12/18\n",
-      "19/19 [==============================] - 1s 57ms/step - loss: 22.2803 - accuracy: 0.8081 - val_loss: 21.8402 - val_accuracy: 0.9000\n",
+      "19/19 [==============================] - 1s 65ms/step - loss: 22.3628 - accuracy: 0.7454 - val_loss: 21.8634 - val_accuracy: 0.8250\n",
       "Epoch 13/18\n",
-      "19/19 [==============================] - 1s 58ms/step - loss: 21.7705 - accuracy: 0.8137 - val_loss: 21.4952 - val_accuracy: 0.8417\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 22.2558 - accuracy: 0.7565 - val_loss: 21.8414 - val_accuracy: 0.7917\n",
       "Epoch 14/18\n",
-      "19/19 [==============================] - 1s 58ms/step - loss: 21.5734 - accuracy: 0.8100 - val_loss: 21.4150 - val_accuracy: 0.8333\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 21.8104 - accuracy: 0.7435 - val_loss: 21.2483 - val_accuracy: 0.8083\n",
       "Epoch 15/18\n",
-      "19/19 [==============================] - 1s 59ms/step - loss: 21.4091 - accuracy: 0.8026 - val_loss: 21.0440 - val_accuracy: 0.8750\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 21.0674 - accuracy: 0.7601 - val_loss: 20.7879 - val_accuracy: 0.8500\n",
       "Epoch 16/18\n",
-      "19/19 [==============================] - 1s 56ms/step - loss: 21.1130 - accuracy: 0.8358 - val_loss: 20.8996 - val_accuracy: 0.8500\n",
+      "19/19 [==============================] - 1s 62ms/step - loss: 20.6682 - accuracy: 0.7620 - val_loss: 20.5618 - val_accuracy: 0.7167\n",
       "Epoch 17/18\n",
-      "19/19 [==============================] - 1s 58ms/step - loss: 20.9089 - accuracy: 0.8155 - val_loss: 21.0564 - val_accuracy: 0.8417\n",
+      "19/19 [==============================] - 1s 63ms/step - loss: 20.6133 - accuracy: 0.8007 - val_loss: 20.3173 - val_accuracy: 0.8250\n",
       "Epoch 18/18\n",
-      "19/19 [==============================] - 1s 57ms/step - loss: 20.8883 - accuracy: 0.8118 - val_loss: 20.6149 - val_accuracy: 0.8917\n"
+      "19/19 [==============================] - 1s 64ms/step - loss: 20.3507 - accuracy: 0.7841 - val_loss: 20.1151 - val_accuracy: 0.8583\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1eb0b044dc0>"
+       "<keras.callbacks.History at 0x1930d030040>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 206,
    "id": "e1dc041c",
    "metadata": {},
    "outputs": [
@@ -856,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 207,
    "id": "0fbfaf7a",
    "metadata": {},
    "outputs": [],
@@ -866,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 208,
    "id": "e3d3c86c",
    "metadata": {},
    "outputs": [],
@@ -876,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 163,
    "id": "888d4d58",
    "metadata": {},
    "outputs": [],
@@ -886,17 +896,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 164,
    "id": "38a7eccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9375"
+       "0.8793103448275862"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,17 +917,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 165,
    "id": "6db4c97d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8695652173913043"
+       "0.7391304347826086"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
